--- a/package.json
+++ b/package.json
@@ -14,12 +14,11 @@
     "@emotion/styled": "^11.10.4",
     "@headlessui/react": "^1.7.0",
     "@heroicons/react": "^2.0.10",
-    "@popperjs/core": "^2.11.6",
-    "bootstrap": "^5.2.1",
     "framer-motion": "^7.3.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.4.0",
     "sass": "^1.54.9"
   },
   "devDependencies": {
