--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.0.9",
     "@chakra-ui/react": "^2.3.2",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
-    "@headlessui/react": "^1.7.0",
-    "@heroicons/react": "^2.0.10",
+    "@headlessui/react": "^1.7.1",
+    "@heroicons/react": "^2.0.11",
     "framer-motion": "^7.3.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
