--- a/package.json
+++ b/package.json
@@ -15,12 +15,19 @@
     "@emotion/styled": "^11.10.4",
     "@headlessui/react": "^1.7.1",
     "@heroicons/react": "^2.0.11",
+    "axios": "^0.27.2",
+    "contentful": "^9.2.4",
     "framer-motion": "^7.3.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
-    "sass": "^1.54.9"
+    "react-router-dom": "^6.4.0",
+    "react-spinners": "^0.13.4",
+    "sass": "^1.54.9",
+    "styled-components": "^5.3.5",
+    "swr": "^1.3.0",
+    "typewriter-effect": "^2.19.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
