--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@heroicons/react": "^2.0.11",
     "axios": "^0.27.2",
     "contentful": "^9.2.4",
+    "emailjs-com": "^3.2.0",
     "framer-motion": "^7.3.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
