--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "emailjs-com": "^3.2.0",
     "framer-motion": "^7.3.2",
     "react": "^18.2.0",
+    "react-audio-visualizers": "^0.1.1",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
