--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@emotion/styled": "^11.10.4",
     "@headlessui/react": "^1.7.1",
     "@heroicons/react": "^2.0.11",
-    "axios": "^0.27.2",
+    "axios": "^1.8.4",
     "contentful": "^9.2.4",
     "emailjs-com": "^3.2.0",
     "framer-motion": "^7.3.2",
@@ -26,7 +26,9 @@
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.4.0",
     "react-spinners": "^0.13.4",
+    "resend": "^4.4.0",
     "sass": "^1.54.9",
+    "sonner": "^2.0.3",
     "styled-components": "^5.3.5",
     "swr": "^1.3.0",
     "typewriter-effect": "^2.19.0"
