lazy push to temp resolve package build

--- a/netlify.toml
+++ b/netlify.toml
@@ -10,3 +10,7 @@
   for = "/*"
     [headers.values]
     Access-Control-Allow-Origin = "*"
+
+[build]
+  command = "npm install --legacy-peer-deps && npm run build"
+  publish = "build"  # or your output directory if different
