lazy push to temp resolve package build

--- a/netlify.toml
+++ b/netlify.toml
@@ -12,5 +12,5 @@
     Access-Control-Allow-Origin = "*"
 
 [build]
-  command = "npm install --legacy-peer-deps && npm run build"
+  command = "npm install && npm run build"
   publish = "build"  # or your output directory if different
