--- a/package.json
+++ b/package.json
@@ -1,45 +1,50 @@
 {
-  "name": "personal-site-react",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@chakra-ui/icons": "^2.0.9",
-    "@chakra-ui/react": "^2.3.2",
-    "@emotion/react": "^11.10.4",
-    "@emotion/styled": "^11.10.4",
-    "@headlessui/react": "^1.7.1",
-    "@heroicons/react": "^2.0.11",
-    "axios": "^1.8.4",
-    "contentful": "^9.2.4",
-    "emailjs-com": "^3.2.0",
-    "framer-motion": "^7.3.2",
-    "react": "^18.2.0",
-    "react-audio-visualizers": "^0.1.1",
-    "react-bootstrap": "^2.5.0",
-    "react-dom": "^18.2.0",
-    "react-icons": "^4.4.0",
-    "react-router-dom": "^6.4.0",
-    "react-spinners": "^0.13.4",
-    "resend": "^4.4.0",
-    "sass": "^1.54.9",
-    "sonner": "^2.0.3",
-    "styled-components": "^5.3.5",
-    "swr": "^1.3.0",
-    "typewriter-effect": "^2.19.0"
-  },
-  "devDependencies": {
-    "@types/react": "^18.0.17",
-    "@types/react-dom": "^18.0.6",
-    "@vitejs/plugin-react": "^2.1.0",
-    "autoprefixer": "^10.4.9",
-    "postcss": "^8.4.16",
-    "tailwindcss": "^3.1.8",
-    "vite": "^3.1.0"
-  }
+	"name": "personal-site-react",
+	"private": true,
+	"version": "0.0.0",
+	"type": "module",
+	"scripts": {
+		"dev": "vite",
+		"build": "vite build",
+		"preview": "vite preview"
+	},
+	"dependencies": {
+		"@chakra-ui/icons": "^2.0.9",
+		"@chakra-ui/react": "^2.3.2",
+		"@emotion/react": "^11.10.4",
+		"@emotion/styled": "^11.10.4",
+		"@headlessui/react": "^1.7.1",
+		"@heroicons/react": "^2.0.11",
+		"axios": "^1.8.4",
+		"contentful": "^9.2.4",
+		"emailjs-com": "^3.2.0",
+		"framer-motion": "^7.3.2",
+		"react": "^18.2.0",
+		"react-audio-visualizers": "^0.1.1",
+		"react-bootstrap": "^2.5.0",
+		"react-dom": "^18.2.0",
+		"react-icons": "^4.4.0",
+		"react-router-dom": "^6.4.0",
+		"react-spinners": "^0.13.4",
+		"resend": "^4.4.0",
+		"sass": "^1.54.9",
+		"sonner": "^2.0.3",
+		"styled-components": "^5.3.5",
+		"swr": "^1.3.0",
+		"typewriter-effect": "^2.19.0"
+	},
+	"devDependencies": {
+		"@types/react": "^18.0.17",
+		"@types/react-dom": "^18.0.6",
+		"@vitejs/plugin-react": "^2.1.0",
+		"autoprefixer": "^10.4.9",
+		"postcss": "^8.4.16",
+		"tailwindcss": "^3.1.8",
+		"vite": "^3.1.0"
+	},
+	"resolutions": {
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"three": "^0.134.0"
+	}
 }
